update: alignement filter staff

--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 {% if request.user.is_staff %}
-                    <div class="apilos-bordered fr-my-3w">
+                    <div class="apilos-bordered fr-my-3w fr-col-12 fr-col-md-12 fr-col-lg-10">
                         <p class="notes">
                             <em>Les paramètres de recherche dans cet encadré sont disponibles uniquement pour les utilisateurs avancés.</em>
                         </p>
