S597 nouveau design liste conventions (#322)
* update: change label for template

* fix: test

* udpdat: init new convention list

* update: init ordering

* update: title of order & arrow

* update: dropdown menu apparence + items

* update: alignement filter staff

* update: alignment search icon + size col

* remove unused rule

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -499,7 +499,24 @@ a[href].apilos-block-faqlink:hover {
 /* .background-contrast-grey950:hover {
   background-color: #DDDDDD;
 } */
+.apilos-order-menu {
+  position: relative;
+}
+.apilos-order-menu .apilos-order-name {
+  margin-left: 5px;
+}
 
+.apilos-order-menu .apilos-order-menu--open {
+  position: absolute;
+  right: 0;
+  z-index: 1;
+  background-color: #fff;
+  border: 1px solid var(--border-default-grey);
+  border-radius: .25rem;
+}
+.apilos-order-menu .apilos-order-menu--open a {
+  background-image: none;
+}
 table.fullwidth {
   width: 100%;
 }
