update: mentions légales & confidentialité improvement

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -747,3 +747,6 @@ button:not(:disabled).apilos-btn--secondary--red:hover {
   margin-right: 0;
   margin-bottom: 0;
 }
+#cgu .fr-table {
+  background-color: #fff;
+}
