--- a/templates/editorial/cgu.html
+++ b/templates/editorial/cgu.html
@@ -207,6 +207,7 @@
                 <p>Les sociétés Scalingo (hébergeur), Sendinblue (envoi emails) et Mailjet (envoi emails) interviennent en tant que sous-traitants. </p>
                 <div class="fr-table fr-p-2w" data-fr-js-table="true">
                     <table class="data-table" data-fr-js-table-element="true">
+                        <caption>Table des souss-traitants</caption>
                         <thead>
                             <tr>
                                 <th scope="col">Partenaire</th>
@@ -217,19 +218,19 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <th>Pays destinataire</th>
+                                <th scope="col">Pays destinataire</th>
                                 <td>France</td>
                                 <td>France</td>
                                 <td>France</td>
                             </tr>
                             <tr>
-                                <th>Traitement réalisé</th>
+                                <th scope="col">Traitement réalisé</th>
                                 <td>Hébergement du site</td>
                                 <td>Envoi de mails et lettres d'information aux utilisateurs</td>
                                 <td>Envoi de mails et lettres d'information aux utilisateurs</td>
                             </tr>
                             <tr>
-                                <th>Garanties</th>
+                                <th scope="col">Garanties</th>
                                 <td>https://scalingo.com/fr/privacy-policy</td>
                                 <td>https://fr.sendinblue.com/legal/privacypolicy/</td>
                                 <td>https://www.mailjet.com/fr/legal/politique-confidentialite/</td>
