--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -37,105 +37,56 @@
             {% endif %}
 
             <div class="fr-grid-row fr-grid-row--gutters fr-mt-1w">
-                {% if False %}
-                    <div class="fr-col-12 fr-col-lg-6">
-                        <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body fr-my-2w">
-                                <h4 class="fr-card__title">
-                                    Convention
-                                </h4>
-                                <div class="table--limited-height">
-                                    {% include "common/display_field_if_exists.html" with label="Nom de l'opération" value=programme.nom %}
-                                    {% include "common/display_field_if_exists.html" with label="Financement" value=lot.financement %}
-                                    {% include "common/display_field_if_exists.html" with label="Ville" value=programme.ville %}
-                                    {% include "common/display_field_if_exists.html" with label="Nombre de logements à conventionner" value=lot.nb_logements %}
+                <div class="fr-col-12">
+                    <div class="fr-card fr-card--no-arrow">
+                        <div class="fr-card__body fr-my-2w">
+                            <div class="block--row-strech" id="{{object_field}}_div">
+                                <div class="block--row-strech-1">
+                                    <h4 class="fr-card__title">
+                                        Bailleur
+                                    </h4>
                                 </div>
+                                {% if convention.display_options.display_progress_bar_1 %}
+                                    <a class="fr-link fr-mb-1w" href="{% url 'conventions:bailleur' convention_uuid=convention.uuid %}" >
+                                        <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                    </a>
+                                {% endif %}
                             </div>
-                        </div>
-                    </div>
-                    <div class="fr-col-12 fr-col-lg-6">
-                        <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body fr-my-2w">
-                                <div class="block--row-strech" id="{{object_field}}_div">
-                                    <div class="block--row-strech-1">
-                                        <h4 class="fr-card__title">
-                                            Bailleur
-                                        </h4>
-                                    </div>
-                                    {% if convention.display_options.display_progress_bar_1 %}
-                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:bailleur' convention_uuid=convention.uuid %}" >
-                                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                        </a>
-                                    {% endif %}
-                                </div>
-                                <div class="table--limited-height">
-                                    {% with bailleur_uuid=bailleur.uuid|slugify %}
-                                        {% include "common/display_field_if_exists.html" with label="Nom" value=bailleur.nom object_field="bailleur__nom__"|add:bailleur_uuid %}
-                                        {% include "common/display_field_if_exists.html" with label="SIRET" value=bailleur.siret object_field="bailleur__siret__"|add:bailleur_uuid %}
-                                        {% include "common/display_field_if_exists.html" with label="Capital social" value=bailleur.capital_social object_field="bailleur__capital_social__"|add:bailleur_uuid %}
-                                        {% include "common/display_field_if_exists.html" with label="Adresse" value=bailleur.adresse object_field="bailleur__adresse__"|add:bailleur_uuid %}
-                                        {% include "common/display_field_if_exists.html" with label="Code postal" value=bailleur.code_postal object_field="bailleur__code_postal__"|add:bailleur_uuid %}
-                                        {% include "common/display_field_if_exists.html" with label="Ville" value=bailleur.ville object_field="bailleur__ville__"|add:bailleur_uuid %}
-                                        {% include "common/display_field_if_exists.html" with label="Nom du signataire de la convention" value=bailleur.signataire_nom object_field="bailleur__signataire_nom__"|add:bailleur_uuid %}
-                                        {% include "common/display_field_if_exists.html" with label="Fonction du signataire de la convention" value=bailleur.signataire_fonction object_field="bailleur__signataire_fonction__"|add:bailleur_uuid %}
-                                        {% include "common/display_field_if_exists.html" with label="Date de délibération" value=bailleur.signataire_date_deliberation object_field="bailleur__signataire_date_deliberation__"|add:bailleur_uuid %}
-                                    {% endwith %}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                {% else %}
-                    <div class="fr-col-12">
-                        <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body fr-my-2w">
-                                <div class="block--row-strech" id="{{object_field}}_div">
-                                    <div class="block--row-strech-1">
-                                        <h4 class="fr-card__title">
-                                            Bailleur
-                                        </h4>
-                                    </div>
-                                    {% if convention.display_options.display_progress_bar_1 %}
-                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:bailleur' convention_uuid=convention.uuid %}" >
-                                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                        </a>
-                                    {% endif %}
-                                </div>
-                                {% with bailleur_uuid=bailleur.uuid|slugify %}
-                                    <div class="fr-grid-row fr-grid-row--gutters">
-                                        <div class="fr-col-12 fr-col-lg-6">
-                                            <div class="fr-mb-2w">
-                                                <strong>{% include "common/display_field_if_exists.html" with value=bailleur.nom object_field="bailleur__nom__"|add:bailleur_uuid %}</strong>
-                                                <div class="fr-ml-3w">
-                                                    {% include "common/display_field_if_exists.html" with value=bailleur.adresse object_field="bailleur__adresse__"|add:bailleur_uuid %}
-                                                    <div class="fr-grid-row fr-grid-row--gutters">
-                                                        <div class="fr-col-6">
-                                                            {% include "common/display_field_if_exists.html" with value=bailleur.code_postal object_field="bailleur__code_postal__"|add:bailleur_uuid %}
-                                                        </div>
-                                                        <div class="fr-col-6">
-                                                            {% include "common/display_field_if_exists.html" with value=bailleur.ville object_field="bailleur__ville__"|add:bailleur_uuid %}
-                                                        </div>
+                            {% with bailleur_uuid=bailleur.uuid|slugify %}
+                                <div class="fr-grid-row fr-grid-row--gutters">
+                                    <div class="fr-col-12 fr-col-lg-6">
+                                        <div class="fr-mb-2w">
+                                            <strong>{% include "common/display_field_if_exists.html" with value=bailleur.nom object_field="bailleur__nom__"|add:bailleur_uuid %}</strong>
+                                            <div class="fr-ml-3w">
+                                                {% include "common/display_field_if_exists.html" with value=bailleur.adresse object_field="bailleur__adresse__"|add:bailleur_uuid %}
+                                                <div class="fr-grid-row fr-grid-row--gutters">
+                                                    <div class="fr-col-6">
+                                                        {% include "common/display_field_if_exists.html" with value=bailleur.code_postal object_field="bailleur__code_postal__"|add:bailleur_uuid %}
+                                                    </div>
+                                                    <div class="fr-col-6">
+                                                        {% include "common/display_field_if_exists.html" with value=bailleur.ville object_field="bailleur__ville__"|add:bailleur_uuid %}
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div>
-                                                {% include "common/display_field_if_exists.html" with label="SIRET" value=bailleur.siret object_field="bailleur__siret__"|add:bailleur_uuid %}
-                                                {% include "common/display_field_if_exists.html" with label="Capital social" value=bailleur.capital_social object_field="bailleur__capital_social__"|add:bailleur_uuid %}
-                                            </div>
                                         </div>
-                                        <div class="fr-col-12 fr-col-lg-6">
-                                            <p class="fr-my-1w"><strong>Signataire de la convention</strong></p>
-                                            <div class="fr-ml-3w">
-                                                {% include "common/display_field_if_exists.html" with value=bailleur.signataire_nom object_field="bailleur__signataire_nom__"|add:bailleur_uuid %}
-                                                <em>{% include "common/display_field_if_exists.html" with value=bailleur.signataire_fonction object_field="bailleur__signataire_fonction__"|add:bailleur_uuid %}</em>
-                                                {% include "common/display_field_if_exists.html" with label="Date de délibération" value=bailleur.signataire_date_deliberation object_field="bailleur__signataire_date_deliberation__"|add:bailleur_uuid %}
-                                            </div>
+                                        <div>
+                                            {% include "common/display_field_if_exists.html" with label="SIRET" value=bailleur.siret object_field="bailleur__siret__"|add:bailleur_uuid %}
+                                            {% include "common/display_field_if_exists.html" with label="Capital social" value=bailleur.capital_social object_field="bailleur__capital_social__"|add:bailleur_uuid %}
                                         </div>
                                     </div>
-                                {% endwith %}
-                            </div>
+                                    <div class="fr-col-12 fr-col-lg-6">
+                                        <p class="fr-my-1w"><strong>Signataire de la convention</strong></p>
+                                        <div class="fr-ml-3w">
+                                            {% include "common/display_field_if_exists.html" with value=convention.signataire_nom object_field="bailleur__signataire_nom__"|add:bailleur_uuid %}
+                                            <em>{% include "common/display_field_if_exists.html" with value=convention.signataire_fonction object_field="bailleur__signataire_fonction__"|add:bailleur_uuid %}</em>
+                                            {% include "common/display_field_if_exists.html" with label="Date de délibération" value=convention.signataire_date_deliberation object_field="bailleur__signataire_date_deliberation__"|add:bailleur_uuid %}
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endwith %}
                         </div>
                     </div>
-                {% endif %}
+                </div>
                 <div class="fr-col-12 fr-col-lg-6">
                     <div class="fr-card fr-card--no-arrow">
                         <div class="fr-card__body fr-my-2w">
