update: mentions légales & confidentialité improvement (#331)
* update: mentions légales & confidentialité improvement

* fix: soundloud issues

--- a/templates/editorial/cgu.html
+++ b/templates/editorial/cgu.html
@@ -3,17 +3,53 @@
 {% block page_title %}Conditions générales d’utilisation - APiLos{% endblock%}
 
 {% block content %}
-    <div class="fr-container-fluid ds_banner fr-pb-3w">
+    <div class="fr-container-fluid ds_banner fr-pb-3w" id="cgu">
         <div class="fr-container">
             <div class="fr-grid-row">
                 <div class="fr-mb-2w">
-                    <h1 class="fr-my-3w fr-mt-md-5w">Conditions générales d’utilisation</h1>
-
+                    <h1 class="fr-my-3w fr-mt-md-5w">Mentions légales et conditions générales d’utilisation</h1>
                     <p><strong>APiLos est un service numérique du Ministère de la Transition écologique et de la Cohésion des territoires</strong></p>
+                    <hr class="fr-col-12 fr-my-3w">
+
+                    <h2>Mentions légales</h2>
+                    <hr class="fr-col-12 fr-my-3w">
+
+                    <h3>Editeur de la Plateforme</h3>
+                    <p>Ministère de la Transition écologique,<br/>
+                        Direction générale de l’Aménagement, du Logement et de la Nature,<br/>
+                        Direction de l’habitat, de l’urbanisme et des paysages,<br/>1 place Carpeaux, 92800 Puteaux, France.<br/>
+                        +33 1 40 81 21 22
+                    </p>
+                    <hr class="fr-col-12 fr-my-3w">
+
+                    <h3>Directrice de la publication</h3>
+                    <p>Madame Stéphanie Dupuy-Lyon<br/>
+                        Directrice générale de l'aménagement, du logement et de la nature (DGALN)
+                    </p>
 
                     <hr class="fr-col-12 fr-my-3w">
 
-                    <h2>Présentation du service</h2>
+                    <h3 class="">Hébergement du service</h3>
+
+                    <p>APiLos est hébergé en France sur l’infrastructure <a href="https://scalingo.com/fr">Scalingo</a>.</p>
+
+                    <blockquote class="bl-highlight">
+                        <address>
+                            Scalingo SAS
+                            <br>15, avenue du Rhin
+                            <br>67100 Strasbourg
+                            <br>France
+                            <br>SIRET 80866548300018
+                        </address>
+                    </blockquote>
+
+                    <hr class="fr-col-12 fr-my-3w">
+
+                    <h2>Conditions générales d’utilisation</h2>
+
+                    <hr class="fr-col-12 fr-my-3w">
+
+                    <h3>Présentation du service</h3>
 
                     <p>La plateforme APiLos contribue à accélérer le versement de l’Aide Personnalisée au Logement (APL) et réduire l’insécurité locative dans le logement social.</p>
 
@@ -33,9 +69,9 @@
 
                     <hr class="fr-col-12 fr-my-3w">
 
-                    <h2 class="">Objet</h2>
+                    <h3 class="">Objet</h3>
 
-                    <h3 class="">Pour les bailleurs</h3>
+                    <h4 class="">Pour les bailleurs</h4>
 
                     <p>La plateforme APiLos est accessible <a href="https://apilos.beta.gouv.fr">ici</a>, elle vous permet de&nbsp;:</p>
 
@@ -44,7 +80,7 @@
                         <li>Suivre vos demandes de convention</li>
                     </ul>
 
-                    <h3 class="">Coté Instructeur</h3>
+                    <h4 class="">Coté Instructeur</h4>
 
                     <p>La plateforme APiLos est accessible <a href="https://apilos.beta.gouv.fr">ici</a>, elle vous permet de&nbsp;:</p>
 
@@ -55,7 +91,7 @@
 
                     <hr class="fr-col-12 fr-my-3w">
 
-                    <h2 class="">Propriété intellectuelle</h2>
+                    <h3 class="">Propriété intellectuelle</h3>
 
                     <p>Ce site est la propriété exclusive du Ministère de la Transition écologique et de la Cohésion des territoires. Toute reproduction ou représentation totale ou partielle de ce site par quelque procédé que ce soit, sans l’autorisation expresse de son propriétaire est interdite et constituerait une contrefaçon sanctionnée par les articles L. 335-2 du Code de la propriété intellectuelle.</p>
 
@@ -69,25 +105,25 @@
 
                     <p>Les marques dont est titulaire le Ministère de la Transition écologique et de la Cohésion des territoires, ainsi que ses logos figurant sur le site sont des marques régulièrement déposées auprès de l’Institut national de la propriété industrielle (INPI). Toute reproduction totale ou partielle de ces marques ou de ces logos effectuées à partir des éléments du site sans l’autorisation expresse du propriétaire de ce site est prohibée au sens des articles L. 713-2 et suivants du Code de la propriété intellectuelle. Tout contrefacteur s’expose aux sanctions prévues aux articles L. 716-1 et suivants du code de la propriété intellectuelle.</p>
 
-                    <h3 class="">Code source</h3>
+                    <h4 class="">Code source</h4>
 
                     <p>Le code source de la plateforme est libre et peut donc être vérifié et amélioré par chacun dans les conditions précisées par la <a href="https://spdx.org/licenses/MIT.html">licence MIT</a>. le code source est disponible sur Github à l’adresse <a href="https://github.com/MTES-MCT/apilos">github.com/MTES-MCT/apilos</a>.</p>
 
-                    <h3 class="">Données administratives publiques relatives</h3>
+                    <h4 class="">Données administratives publiques relatives</h4>
 
                     <p>Les informations publiques délivrées par le service le sont sous Licence Ouverte V 2.0. Vous êtes donc libres de réutiliser ces informations sous réserve de mentionner la paternité de l’information et la date de dernière mise à jour de l’information utilisée. Par exemple, sur la forme <q>Le Ministère de la Transition écologique et de la Cohésion des territoires – Téléchargées sur apilos.beta.gouv.fr mise à jour du &lt;date&gt;</q>.</p>
 
                     <hr class="fr-col-12 fr-my-3w">
 
-                    <h2 class="">Vie privée</h2>
+                    <h3 class="">Vie privée</h3>
 
-                    <h3 class="">Données à caractère personnel</h3>
+                    <h4 class="">Données à caractère personnel</h4>
 
                     <p>Nous nous engageons à ce que la collecte et le traitement de vos données, effectués à partir du site soient conformes au règlement général sur la protection des données du 27 avril 2016, applicable depuis le 25 mai 2018, et à la loi Informatique et Libertés dans sa dernière version modifiée du 20 juin 2018.</p>
 
                     <p>Ces dispositions fixent des règles strictes de confidentialité et de sécurité à toute organisation, publique et privée, dans le cadre du traitement des données à caractère personnel de leurs utilisateurs, et ce afin de protéger la vie privée de ceux-ci.</p>
 
-                    <h3 class="">Responsable du traitement</h3>
+                    <h4 class="">Responsable du traitement</h4>
 
                     <p>Le responsable du traitement de vos données à caractère personnel est&nbsp;:</p>
 
@@ -101,7 +137,7 @@
                         </address>
                     </blockquote>
 
-                    <h3 class="">Traitement des données et utilisation</h3>
+                    <h4 class="">Traitement des données et utilisation</h4>
 
                     <p>Nous ne pouvons utiliser vos données à caractère personnel qu’à des fins à la fois légitimes et nécessaires. Cela signifie concrètement que nous traitons vos données à caractère personnel pour les finalités suivantes&nbsp;:</p>
 
@@ -119,7 +155,7 @@
                         <li>Adresse IP (collectée automatiquement lors de la navigation et stockée temporairement dans les journaux d’accès)</li>
                     </ul>
 
-                    <h3 class="">Vos droits</h3>
+                    <h4 class="">Vos droits</h4>
 
                     <p>Nous nous engageons à prendre les mesures techniques et organisationnelles appropriées afin de garantir la sécurité du traitement des données à caractère personnel de chacun.</p>
 
@@ -158,13 +194,53 @@
 
                 <p>Les modalités de réclamation sont précisées sur le site de la CNIL&nbsp;: <a href="https://www.cnil.fr">www.cnil.fr</a>.</p>
 
-                <h3 class="">Procédure en cas de violations de données à caractère personnel</h3>
+                <h4 class="">Procédure en cas de violations de données à caractère personnel</h4>
 
                 <p>En cas de destruction, de perte, d’altération, de divulgation non autorisée de données à caractère personnel transmises, conservées ou traitées d’une autre manière, ou d’accès non autorisé à de telles données, de manière accidentelle ou illicite, susceptible d’engendrer un risque élevé pour les droits et libertés de l’utilisateur, nous vous en informerons des faits et des mesures prises, dans les meilleurs délais.</p>
 
                 <p>Nous nous assurerons également que le nécessaire soit fait quant à la notification de la violation en question à la CNIL dans les 72 heures après en avoir pris connaissance, à moins que la violation ne présente pas un risque élevé pour vos droits et libertés.</p>
 
-                <h3 class="">Cookies</h3>
+                <h4>Délai de conservation des données personnelles</h4>
+                <p>Nous conservons les données personnelles pour la durée strictement nécessaire à la réalisation des finalités décrites dans les présentes CGU, c’est-à-dire tant que l’Utilisateur poursuit son utilisation du service.</p>
+                <h4>Sous-traitants</h4>
+                <p>Certaines des données sont envoyées à des sous-traitants pour réaliser certaines missions. Le responsable de traitement s'est assuré de la mise en œuvre par ses sous-traitants de garanties adéquates et du respect de conditions strictes de confidentialité, d’usage et de protection des données.</p>
+                <p>Les sociétés Scalingo (hébergeur), Sendinblue (envoi emails) et Mailjet (envoi emails) interviennent en tant que sous-traitants. </p>
+                <div class="fr-table fr-p-2w" data-fr-js-table="true">
+                    <table class="data-table" data-fr-js-table-element="true">
+                        <caption>Table des souss-traitants</caption>
+                        <thead>
+                            <tr>
+                                <th scope="col">Partenaire</th>
+                                <th scope="col">Scalingo</th>
+                                <th scope="col">SendinBlue</th>
+                                <th scope="col">Mailjet</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="col">Pays destinataire</th>
+                                <td>France</td>
+                                <td>France</td>
+                                <td>France</td>
+                            </tr>
+                            <tr>
+                                <th scope="col">Traitement réalisé</th>
+                                <td>Hébergement du site</td>
+                                <td>Envoi de mails et lettres d'information aux utilisateurs</td>
+                                <td>Envoi de mails et lettres d'information aux utilisateurs</td>
+                            </tr>
+                            <tr>
+                                <th scope="col">Garanties</th>
+                                <td>https://scalingo.com/fr/privacy-policy</td>
+                                <td>https://fr.sendinblue.com/legal/privacypolicy/</td>
+                                <td>https://www.mailjet.com/fr/legal/politique-confidentialite/</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+
+                <h4 class="">Cookies</h4>
 
                 <p>Nous déposons des cookies de mesure d’audience (nombre de visites, pages consultées), respectant les conditions d’exemption du consentement de l’internaute définies par la recommandation <q>Cookies</q> de la <a href="https://www.cnil.fr/">Commission nationale informatique et libertés (CNIL)</a>. Cela signifie, notamment, que ces cookies ne servent qu’à la production de statistiques anonymes et ne permettent pas de suivre votre navigation sur d’autres sites.</p>
 
@@ -174,13 +250,13 @@
 
                 <hr class="fr-col-12 fr-my-3w">
 
-                <h2 class="">Évolution du service</h2>
+                <h3 class="">Évolution du service</h3>
 
                 <p>Nous pouvons faire évoluer APiLos sans information préalable ou préavis. Nous ajoutons régulièrement des données, retravaillons l’interface et modifions les formulations sur la base de vos retours et des évolutions réglementaires et législatives.</p>
 
                 <hr class="fr-col-12 fr-my-3w">
 
-                <h2 class="">Disponibilité du service</h2>
+                <h3 class="">Disponibilité du service</h3>
 
                 <p>Nous pouvons suspendre l’accès à APiLos sans information préalable ni préavis, notamment pour des raisons de maintenance. Nous mettons l’application à jour régulièrement. L’indisponibilité ne dépasse généralement pas une dizaine de secondes.</p>
 
@@ -190,23 +266,8 @@
 
                 <hr class="fr-col-12 fr-my-3w">
 
-                <h2 class="">Hébergement du service</h2>
 
-                <p>APiLos est hébergé en France sur l’infrastructure <a href="https://scalingo.com/fr">Scalingo</a>.</p>
-
-                <blockquote class="bl-highlight">
-                    <address>
-                        Scalingo SAS
-                        <br>15, avenue du Rhin
-                        <br>67100 Strasbourg
-                        <br>France
-                        <br>SIRET 80866548300018
-                    </address>
-                </blockquote>
-
-                <hr class="fr-col-12 fr-my-3w">
-
-                <h2 class="">Évolution des conditions d’utilisation</h2>
+                <h3 class="">Évolution des conditions d’utilisation</h3>
 
                 <p>Les termes des présentes conditions d’utilisation peuvent être modifiés ou complétés à tout moment, sans préavis, en fonction des modifications apportées au service, de l’évolution de la législation ou pour tout autre motif jugé nécessaire. Ces modifications et mises à jour s’imposent à l’utilisateur qui doit, en conséquence, se référer régulièrement à cette rubrique pour vérifier les conditions générales en vigueur.</p>
 
