--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -31,13 +31,6 @@
                                 <h2 class="fr-mb-3w">Bienvenue dans votre espace Instructeur</h2>
                                 <p class="apilos-subtitle">{{conventions.total_conventions}} convention{{ conventions.total_conventions|pluralize }} liée{{ conventions.total_conventions|pluralize }} à votre administration trouvée{{ conventions.total_conventions|pluralize }} dans APiLos</p>
                             </div>
-                            {% if not CERBERE_AUTH %}
-                                <div>
-                                    <a class="fr-btn" href="{% url 'conventions:selection' %}">
-                                        <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer une nouvelle convention
-                                    </a>
-                                </div>
-                            {% endif %}
                         {% else %}
                             <p class="fr-mb-3w">Votre profil n'est pas bien configuré, merci de vous rapprocher de votre instructeur</p>
                         {% endif %}
@@ -54,7 +47,12 @@
                     <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--center">
                         <div class="fr-my-5w">
                             <a class="fr-btn" href="{% url 'conventions:selection' %}">
-                                <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer une nouvelle convention
+                                <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>
+                                {% if request|is_instructeur %}
+                                    Créer une nouvelle convention comme un bailleur
+                                {% else %}
+                                    Créer une nouvelle convention
+                                {% endif %}
                             </a>
                         </div>
                     </div>
