--- a/templates/emails/conventions/ItoB_correction_needed.html
+++ b/templates/emails/conventions/ItoB_correction_needed.html
@@ -1,7 +1,7 @@
 <h4>Bonjour</h4>
 
 <p>La convention <a href="{{convention_url}}">{{convention}}</a> a été instruite.
-    Vous avez des modifications à réaliser.</p>
+    Vous avez des vérifications ou des modifications à réaliser.</p>
 
 {% if commentaire %}
     <p>L'instructeur vous a laissé le message suivant : </p>
