--- a/templates/conventions/selection.html
+++ b/templates/conventions/selection.html
@@ -104,7 +104,7 @@
                                                     {% include "common/form/input_select.html" with form_input=form.type_habitat mandatory_input=True %}
                                                 </div>
                                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-4 fr-mb-2w">
-                                                    {% include "common/form/input_select.html" with form_input=form.financement enum=financements mandatory_input=True %}
+                                                    {% include "common/form/input_select.html" with form_input=form.financement mandatory_input=True %}
                                                 </div>
                                             </div>
 
