--- a/templates/conventions/actions/bailleur_notification.html
+++ b/templates/conventions/actions/bailleur_notification.html
@@ -1,4 +1,37 @@
 {% load custom_filters %}
+{% if request|is_instructeur and convention.is_project and convention.cree_par.is_instructeur %}
+    <div class="fr-col-md-12  fr-py-5w">
+        <div role="alert" class="fr-alert fr-alert--info">
+            <h4>Vous avez créé cette convention en lieu et place du bailleur et vous souhaitez sa relecture<h4>
+                <p>Faites en part au bailleur, cette convention passera «Corrections requises» et
+                    le bailleur pourra vous l'a renvoyer avec le statut «Instruction requise»</p>
+                <div>
+                    <form method="post" action="{% url 'conventions:feedback' convention_uuid=convention.uuid %}" data-turbo="false">
+                        {% csrf_token %}
+                        <div class="fr-checkbox-group">
+                            <input
+                                type="hidden"
+                                id="{{notificationForm.from_instructeur.id_for_label}}"
+                                name="{{notificationForm.from_instructeur.html_name}}"
+                                value=1>
+                            <input
+                                type="checkbox"
+                                id="{{notificationForm.send_copy.id_for_label}}"
+                                name="{{notificationForm.send_copy.html_name}}"
+                                checked>
+                            <label class="fr-label" for="{{notificationForm.send_copy.id_for_label}}">envoyez-moi une copie du message envoyé
+                            </label>
+                        </div>
+                        {% include "common/form/input_textarea.html" with label="Ajouter un commentaire à l'attention du bailleur (optionnel)" form_input=notificationForm.comment %}
+                        <button class="fr-btn">
+                            Notifier le bailleur
+                        </button>
+                    </form>
+                </div>
+            </div>
+            </div>
+{% endif %}
+
 {% if request|is_instructeur and convention.display_options.display_notification %}
     <div class="fr-col-md-12  fr-py-5w">
         <div role="alert" class="fr-alert fr-alert--info">
