--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -27,7 +27,7 @@
                                 </div>
                             {% endif %}
                         {% elif request|is_instructeur or request.user.is_superuser %}
-                            <div>
+                            <div class="block--row-strech-1">
                                 <h2 class="fr-mb-3w">Bienvenue dans votre espace Instructeur</h2>
                                 <p class="apilos-subtitle">{{conventions.total_conventions}} convention{{ conventions.total_conventions|pluralize }} liée{{ conventions.total_conventions|pluralize }} à votre administration trouvée{{ conventions.total_conventions|pluralize }} dans APiLos</p>
                             </div>
@@ -41,13 +41,18 @@
 
         {% include "conventions/convention_list.html" %}
 
-        {% if request|is_bailleur and not CERBERE_AUTH %}
+        {% if not CERBERE_AUTH %}
             <div class="fr-container-fluid">
                 <div class="fr-container">
                     <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--center">
                         <div class="fr-my-5w">
                             <a class="fr-btn" href="{% url 'conventions:selection' %}">
-                                <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer une nouvelle convention
+                                <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>
+                                {% if request|is_instructeur %}
+                                    Créer une nouvelle convention comme un bailleur
+                                {% else %}
+                                    Créer une nouvelle convention
+                                {% endif %}
                             </a>
                         </div>
                     </div>
