--- a/templates/conventions/actions/submit_convention.html
+++ b/templates/conventions/actions/submit_convention.html
@@ -7,17 +7,16 @@
             Votre projet {% if convention.is_avenant %}d'avenant à la {% else %}de {% endif %}convention est terminé ? Soumettez-le à l'instruction. Le service instructeur en sera informé et vous tiendra au courant de l'évolution de l'instruction.
         </p>
         <p>
-            Si vous avez encore des modifications à apporter au projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %}, vous pouvez enregistrer {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %} et y revenir plus tard.
+            Si vous avez encore des modifications à apporter au projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %}, vous pouvez y revenir plus tard.
         </p>
         <form method="post" action="{% url 'conventions:save' convention_uuid=convention.uuid %}" data-turbo="false">
             {% csrf_token %}
-            <button name="SubmitConvention" value=True class="fr-btn fr-my-1w">
+            <button name="SubmitConvention" value=True class="fr-btn fr-my-3w">
                 Soumettre au service instructeur
             </button>
-            <button class="fr-my-1w fr-ml-2w fr-link">
-                <u>Enregistrer comme brouillon</u>
-            </button>
-
         </form>
+        <p class="fr-text--xs notes">
+            <em>Votre projet de convention est enregistré.Si vous le souhaitez, vous pouvez quitter cette page et y revenir plus tard.</em>
+        </p>
     </div>
 </div>
