Fix lower z-index for sticky header and remove col-X class from convention list

--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -109,28 +109,28 @@
                             {% endif %}
                             <thead>
                                 <tr class="th_inline">
-                                    <th title="Statut de la convention" scope="col" class="col-3">
+                                    <th title="Statut de la convention" scope="col">
                                         Statut
                                     </th>
                                     {% if request|is_instructeur %}
-                                        <th scope="col" class="col-1">Bailleur</th>
+                                        <th scope="col">Bailleur</th>
                                     {% endif %}
                                     {% if request|display_administration %}
-                                        <th scope="col" class="col-1">Instructeur</th>
+                                        <th scope="col">Instructeur</th>
                                     {% endif %}
-                                    <th title="Opération" class="col-2" scope="col">
+                                    <th title="Opération" scope="col">
                                         Opération
                                     </th>
-                                    <th title="Financement" class="col-1" scope="col">
+                                    <th title="Financement" scope="col">
                                         Financement
                                     </th>
-                                    <th title="Ville" class="col-2" scope="col">
+                                    <th title="Ville" scope="col">
                                         Ville
                                     </th>
-                                    <th title="Nombre de logements à conventionner" class="col-1" scope="col">
+                                    <th title="Nombre de logements à conventionner" scope="col">
                                         Logements
                                     </th>
-                                    <th title="Date de livraison et mise en service" class="col-2" scope="col">
+                                    <th title="Date de livraison et mise en service" scope="col">
                                         Livraison
                                     </th>
                                 </tr>
